major spacing fixes

--- a/vizcom-app/src/pages/Home/Generate/generate.scss
+++ b/vizcom-app/src/pages/Home/Generate/generate.scss
@@ -20,22 +20,27 @@
 }
 .generate-btn {
     background-color: #0F0F0F;
-    width: 531px;
-    height:72px;
+    width: 331px;
+    height:52px;
     font-size: 20px;
     border-radius: 34px;
+    
 } 
 
 .waves-effect {
     background-color: grey;
 }
 .genbtn-container 
+
+
 {
 
     height: 10vh; /* Magic here */
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-bottom: 15%;
+    padding-top: 2%;
 
     .btn{
         background-color: #0F0F0F;
@@ -79,12 +84,13 @@
 }
 
 .generated-container{
-    padding-left: 10rem;
-    padding-right: 10rem;
-    padding-top: 3%;
-    padding-bottom: 3%;
+    padding-left: 15rem;
+    padding-right: 15rem;
+  
+
     .generated-image{
         border-radius: 2rem;
+        cursor: pointer; 
 
     }
 }
@@ -128,6 +134,11 @@
 }
 .colelct {
     float:right;
+    cursor: pointer; 
+}
+
+.colelct-confirm{
+    float:right;
 }
 
 .save-buttons{
@@ -139,3 +150,6 @@
     transition: 0.2s;
 }
 
+.add-bucket{
+    font-size:0.6vw;
+}
