--- a/vizcom-app/src/pages/Home/home.scss
+++ b/vizcom-app/src/pages/Home/home.scss
@@ -1,5 +1,5 @@
 .tools {
-  margin: 10%;
+  margin: 5%;
 }
 
 .tools h1 {
